vlib/v/parser/tests/lock_var_name_assign_err.out
vlib/v/parser/tests/lock_var_name_assign_err.vv:1:6: error: unexpected token `:=`, expecting one or more shared variable names
    1 | lock := 12
      |      ~~
